# pcla-wrapper

./: .dockerignore  Dockerfile  README.md  entrypoint.sh  justfile  pcla_config.yaml  pyproject.toml
.github/workflows/: common-runtime.yml  docker-publish.yml
PCLA-wrapper/: PCLA_agent.py
docker/requirements/: core.txt
docs/: README.md  agents.md  configuration.md  deployment.md  lifecycle.md  state-based-agents.md  troubleshooting.md
pcla_wrapper/: agent_profiles.json  pcla_av.py  profiles.py  server.py  version.py  weights.py
scripts/: download_pcla_weights.sh  smoke_common_agent.py  validate_common_runtime.py
tests/: test_smoke.py
