[project]
name = "pcla-wrapper"
version = "0.3.2"
description = "PISA AV service wrapper for PCLA agents"
readme = "README.md"
requires-python = ">=3.8,<3.11"
dependencies = [
    "pisa-api>=0.4.1",
    "tomli>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.uv.sources]
pisa-api = { git = "https://github.com/pisa-hut/pisa-api.git" }

[build-system]
requires = ["setuptools>=40.8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pcla_wrapper*"]

[tool.setuptools.package-data]
pcla_wrapper = ["agent_profiles.json"]

[tool.ruff]
line-length = 100
target-version = "py38"
extend-exclude = ["PCLA"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "UP045"]

[tool.pytest.ini_options]
testpaths = ["tests"]
